src/objects/sma__MAAnalytic__c.object
<CustomObject>
    <fields>
        <fullName>sma__DateTime__c</fullName>
        <formula>CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>sma__FavoriteLocation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Favorite Location</label>
        <referenceTo>sma__MALocation__c</referenceTo>
        <relationshipLabel>MapAnything Analytics</relationshipLabel>
        <relationshipName>MapAnything_Analytics</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sma__Layer__c</fullName>
        <formula>IF(NOT(ISBLANK(sma__FavoriteLocation__c)), sma__FavoriteLocation__r.Name,
     IF(NOT(ISBLANK( sma__MALayer__c )), sma__MALayer__r.Name, 
          IF(NOT(ISBLANK( sma__SavedQuery__c )), sma__SavedQuery__r.Name,
               IF(NOT(ISBLANK( sma__Territory__c )),  sma__Territory__r.Name,
                    &apos;Unknown&apos;
               )
          )
     ) 
)</formula>
        <label>Layer</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sma__MALayer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>MA Layer</label>
        <referenceTo>sma__MALayer__c</referenceTo>
        <relationshipLabel>MapAnything Analytics</relationshipLabel>
        <relationshipName>MapAnything_Analytics</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sma__SavedQuery__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Saved Query</label>
        <referenceTo>sma__MASavedQry__c</referenceTo>
        <relationshipLabel>MapAnything Analytics</relationshipLabel>
        <relationshipName>MapAnything_Analytics</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sma__SubType__c</fullName>
        <label>Sub Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Marker Layer</fullName>
                </value>
                <value>
                    <fullName>Shape Layer</fullName>
                </value>
                <value>
                    <fullName>Data Layer</fullName>
                </value>
                <value>
                    <fullName>Favorite Location</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>sma__Territory__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Territory</label>
        <referenceTo>sma__MATerritory__c</referenceTo>
        <relationshipLabel>MapAnything Analytics</relationshipLabel>
        <relationshipName>MapAnything_Analytics</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sma__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Plot Layer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>sma__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>MapAnything_Analytics</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>MapAnything Analytic</label>
    <listViews>
        <fullName>sma__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{00000}</displayFormat>
        <label>MapAnything Analytic</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>MapAnything Analytics</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>